@@ -1,6 +1,7 @@
 <h5>3.05 Final   [2021-10-21]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
  - moved to final (goffy)
+ - fixed bug in class handler creation (jjdai/goffy)
  
 <h5>3.05 RC2   [2021-10-13]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
